# Rust-API

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml
contract/: Cargo.toml
contract/src/: lib.rs
dao/: Cargo.toml
dao/src/: lib.rs
migrations/: Cargo.toml  README.md
migrations/src/: main.rs
migrations/src/migrations/: mod.rs
service/: Cargo.toml
service/src/: endpoints.rs  main.rs  service.rs
