[package]
name = "contract"
version = "0.1.0"
authors = ["felipevargas <felipeng.eletrica@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.44"
uuid = { version = "0.7", features = ["v4", "serde"] }


