[package]
name = "dao"
version = "0.1.0"
authors = ["felipevargas <felipeng.eletrica@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contract = { path = "../contract" }
postgres = { version = "0.15.2", features = ["with-uuid"] }
actix-web = "2.0.0"
actix-rt = "1.0.0"
futures = "0.3.1"
tokio-postgres = "0.5.1"
tokio = "0.2.9"
uuid = { version = "0.7", features = ["v4", "serde"] }
