[package]
name = "service"
version = "0.1.0"
authors = ["Gabi Moraes <gcbdemoraes@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contract = { path = "../contract" }
dao      = { path = "../dao" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.44" 
actix = "0.9.0"
actix-web = "2.0.0"
actix-rt = "1.0.0"
env_logger = "0.7.1"
log = "0.4.8"